force-app/main/default/objects/Shipmentmembers__c/Shipmentmembers__c.object-meta.xml
<CustomObject>
    <label>Shipment Team</label>
    <nameField>
        <displayFormat>ST-{000000}</displayFormat>
        <label>Shipment Team ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>