force-app/main/default/objects/Shipmentmembers__c/fields/Account_Team_Fomula__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Fomula__c</fullName>
    <formula>AccountTeam__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Team</label>
    <type>Text</type>
</CustomField>