force-app/main/default/objects/Shipmentmembers__c/fields/AccountedDate__c.field-meta.xml
<CustomField>
    <fullName>AccountedDate__c</fullName>
    <formula>AdvancedShipment__r.AccountedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounted Date</label>
    <type>Date</type>
</CustomField>