force-app/main/default/objects/Shipmentmembers__c/fields/AccountTeam__c.field-meta.xml
<CustomField>
    <fullName>AccountTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Team</label>
    <referenceTo>AccountTeam__c</referenceTo>
    <relationshipName>Shipment_members</relationshipName>
    <type>Lookup</type>
</CustomField>