force-app/main/default/objects/Shipmentmembers__c/fields/AdvancedShipment__c.field-meta.xml
<CustomField>
    <fullName>AdvancedShipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job ID</label>
    <referenceTo>AdvancedShipment__c</referenceTo>
    <relationshipName>Shipment_members</relationshipName>
    <type>Lookup</type>
</CustomField>