force-app/main/default/objects/Shipmentmembers__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>case__c</referenceTo>
    <relationshipLabel>Shipment members</relationshipLabel>
    <relationshipName>Shipment_members</relationshipName>
    <type>Lookup</type>
</CustomField>