force-app/main/default/objects/Shipmentmembers__c/fields/JobNo__c.field-meta.xml
<CustomField>
    <fullName>JobNo__c</fullName>
    <formula>if(ISBLANK(ShipmentID__c) = TRUE, AdvancedShipment__r.FileNo__c, IF( TEXT(ShipmentID__r.TransportationWay__c) &lt;&gt; &quot;AIR&quot;, ShipmentID__r.HBLNumber__c, ShipmentID__r.HAWBNumber__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job No.</label>
    <type>Text</type>
</CustomField>