force-app/main/default/objects/Shipmentmembers__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Shipment_members</relationshipName>
    <type>Lookup</type>
</CustomField>