force-app/main/default/objects/Shipmentmembers__c/fields/Member_fomula__c.field-meta.xml
<CustomField>
    <fullName>Member_fomula__c</fullName>
    <formula>Member__r.FirstName + &quot; &quot; +  Member__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member</label>
    <type>Text</type>
</CustomField>