force-app/main/default/objects/Shipmentmembers__c/fields/ShipmentID__c.field-meta.xml
<CustomField>
    <fullName>ShipmentID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment ID</label>
    <referenceTo>FTMSSO__c</referenceTo>
    <relationshipName>Shipment_members</relationshipName>
    <type>Lookup</type>
</CustomField>