force-app/main/default/objects/Shipmentmembers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountTeam__c</columns>
    <columns>Member__c</columns>
    <columns>Role__c</columns>
    <columns>AdvancedShipment__c</columns>
    <columns>ShipmentID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ShipmentID__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>